--- a/006-mobile-first/styles/banner.css
+++ b/006-mobile-first/styles/banner.css
@@ -33,3 +33,31 @@
     background: url("../img/Lupa.svg") no-repeat;
     background-position: 1em;
 }
+
+@media screen and (min-width: 1024px) {
+    .banner__titulo {
+        font-size: 36px;
+    }
+
+    .banner__pesquisa {
+        width: 60%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 9.5em;
+    }
+}
+
+@media screen and (min-width: 1728px) {
+    .banner {
+        padding: 6em 0;
+    }
+    
+    .banner__pesquisa {
+        width: 35%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 10em;
+    }
+}
