--- a/006-mobile-first/styles/carrossel.css
+++ b/006-mobile-first/styles/carrossel.css
@@ -20,3 +20,106 @@
 .swiper-button-prev, .swiper-button-next {
     display: none;
 }
+
+.card__descricao {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0.5em;
+}
+
+.card__botoes {
+    display: flex;
+    justify-content: space-between;
+}
+
+.card__botoes__lista {
+    display: flex;
+}
+
+.card {
+    background: var(--branco);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    margin: 1em;
+    padding: 1em;
+}
+
+.card__titulo {
+    color: var(--laranja);
+    font-weight: 700;
+}
+
+.card__descricao__titulo-livro {
+    color: var(--azul);
+    font-size: 18px;
+    font-weight: 700;
+    margin: 0.5em 0;
+}
+
+.card__descricao__texto {
+    font-size: 14px;
+}
+
+.card__botoes__item {
+    margin: 0 0.5em;
+}
+
+.card__botoes__ancora {
+    background-color: var(--laranja);
+    padding: 1em 2.2em;
+    color: var(--branco);
+    font-weight: 700;
+    text-decoration: none;
+}
+
+@media screen and (min-width: 1024px) {
+    .carrossel__titulo {
+        font-size: 26px;
+    }
+
+    .swiper {
+        width: 60%;
+    }
+
+    .swiper-pagination {
+        margin: 2em 0 3em 0;
+    }
+
+    .card {
+        width: 40%;
+        margin: 2em auto;
+    }
+}
+
+@media screen and (min-width: 1728px) {
+    .carrossel__container {
+        display: flex;
+        margin: 0 20vw 3em 20vw;
+        align-items: center;
+        gap: 3em;
+    }
+
+    .swiper-pagination {
+        margin: 1em 0;
+    }
+
+    .swiper {
+        width: 50%;
+    }
+
+    .card {
+        width: 60%;
+    }
+
+    .card__descricao {
+        gap: 1em;
+    }
+
+    .card__titulo {
+        font-size: 32px;
+    }
+
+    .card__descricao__texto {
+        font-size: 16px;
+    }
+}
